<resources>
    <string name="serverURL">http://192.168.0.21:8080</string>  <!--Server en local-->
    <!--<string name="serverURL">https://coffee-mug-0606.ew.r.appspot.com</string>  Server online-->
    <string name="app_name">Who pays coffee</string>
    <string name="user">Usuari</string>
    <string name="user_name">Nom Usuari</string>
    <string name="password">Contrasenya</string>
    <string name="action_sign_in">Entra</string>
    <string name="alta_text">Donar-se d\'alta</string>
    <string name="gestio_app">Gestió aplicació</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="pagos_estadistica_title">Pagaments i estadística</string>
    <string name="pagos_title">Pagaments</string>
    <string name="estadistica_title">Estadística</string>
    <!-- Activity de registro -->
    <string name="txt_registre_usuari">"Alta nou usuari"</string>
    <string name="txt_user_name">"Nom d\'usuari"</string>
    <string name="txt_email">"E-mail"</string>
    <string name="btn_register">"Registra"</string>
    <string name="btn_cancel">"Cancel·la"</string>
    <!-- Menú usuari i admin -->
    <string name="item_menu_grups">"Grups"</string>
    <string name="item_menu_usuaris">"Usuaris"</string>
    <string name="item_menu_estadistic">"Pagaments i estadística"</string>
    <string name="item_menu_conf">"Configuració"</string>
    <string name="item_menu_logout">"Sortir"</string>
    <!-- Conf Usuari -->
    <string name="conf_toolbar_name">"Dades Usuari"</string>
    <string name="change_pass">"Canviar la contrasenya"</string>
    <string name="btn_canvi">"Canvia"</string>
    <string name="new_pass_txt">"Nova contrasenya"</string>
    <string name="verif_new_pass_txt">"Verifica la nova contrasenya"</string>
    <string name="check_mostra_pass">"Mostra la contrasenya</string>
    <!-- Administracio usuaris i grups -->
    <string name="admin_user_tittle">"Adm. usuaris"</string>
    <string name="admin_grup_tittle">"Adm. grups"</string>
    <!-- Grups usuaris -->
    <string name="user_grups_tittle">"Grups"</string>
    <string name="btn_new_grup_acepta">"Afegir"</string>
    <string name="txt_new_grup">"Nom del grup:"</string>
    <string-array name="userGrupsSpinnerItems">
        <item>Tots</item>
        <item>Propietari</item>
        <item>Membre</item>
    </string-array>
    <!-- Afegir membres -->
    <string name="txt_new_membre_NickName">"Nom del nou membre de grup:"</string>
    <string name="txt_new_membre_UserName">"Nom de l'usuari a l'aplicació:"</string>
    <string name="checkbox_new_membre">"Marca si és usuari de l'aplicació"</string>
    <!-- Membre detall -->
    <string name="txt_membre_detall_nickName">"NickName del grup:"</string>
    <string name="txt_membre_detall_userName">"Nom d'usuari de l'aplicació:"</string>
    <string name="checkBox_membre_detall_isAdmin">"Es administrador del grup"</string>
    <string name="btn_membre_detall_tornar">"Tornar"</string>
    <string name="appBar_titol">"Dades del membre"</string>
    <!-- Detall estadistica grup -->
    <string name="data_inici">"Data inici"</string>
    <string name="data_final">"Data fi"</string>
    <!-- Nou pagament -->
    <string name="new_pagament_usuari">"Nou pagament de l'usuari "</string>
</resources>