<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#00FFFFFF"
    tools:context=".passwordChangeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNewPass1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pass_txt" />

        <EditText
            android:id="@+id/editTextNewPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txtNewPass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verif_new_pass_txt" />

        <EditText
            android:id="@+id/editTextNewPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkBoxMostraPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_mostra_pass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNewPasswordCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/btnNewPasswordOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_canvi" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>