<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".NewMembreActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNewMembreNickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_new_membre_NickName"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNewMembreNickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/checkBoxEsUsuari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_new_membre" />

        <TextView
            android:id="@+id/txtNewMembreUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_new_membre_UserName"
            android:textStyle="bold"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editTextNewMembreUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNewMembreCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#73443E"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/btnNewMembreOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#73443E"
                android:text="@string/btn_new_grup_acepta" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>