<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MembreDetallActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutMembreDetall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/membre_detall_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:title="@string/appBar_titol"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="#FADFD0" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView_membre_detall_nickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/txt_membre_detall_nickName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutMembreDetall" />

    <TextView
        android:id="@+id/textView_membre_detall_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/txt_membre_detall_userName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_membre_detall_nickName" />

    <EditText
        android:id="@+id/editText_membre_detall_nickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_membre_detall_nickName"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_membre_detall_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_membre_detall_userName"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/checkBox_membre_detall_isAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="177dp"
        android:text="@string/checkBox_membre_detall_isAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_membre_detall_userName" />

    <Button
        android:id="@+id/btn_membre_detall_tornar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#73443E"
        android:text="@string/btn_membre_detall_tornar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_membre_detall_isAdmin" />

    <ImageButton
        android:id="@+id/imageButton_membre_detall_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#73443E"
        app:layout_constraintStart_toEndOf="@+id/editText_membre_detall_nickName"
        app:layout_constraintTop_toBottomOf="@+id/textView_membre_detall_nickName"
        app:srcCompat="@drawable/edit" />

    <ImageButton
        android:id="@+id/imageButton_membre_detall_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#73443E"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/imageButton_membre_detall_edit"
        app:layout_constraintTop_toBottomOf="@+id/textView_membre_detall_nickName"
        app:srcCompat="@drawable/save" />

    <ImageButton
        android:id="@+id/imageButton_membre_detall_edit_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#73443E"
        app:layout_constraintStart_toEndOf="@+id/editText_membre_detall_userName"
        app:layout_constraintTop_toBottomOf="@+id/textView_membre_detall_userName"
        app:srcCompat="@drawable/edit" />

    <ImageButton
        android:id="@+id/imageButton_membre_detall_save_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#73443E"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/imageButton_membre_detall_edit_userName"
        app:layout_constraintTop_toBottomOf="@+id/textView_membre_detall_userName"
        app:srcCompat="@drawable/save" />

</androidx.constraintlayout.widget.ConstraintLayout>